--- a/index.html
+++ b/index.html
@@ -65,7 +65,53 @@
     <div class="row">
           <h1>Hello, I am Amogh</h1>
           <div class="next-row">
-            <p>I love problem solving and writing code that brings changes in real life.</p>
+            <h2>I love <span id="qq"> Exploring new technologies </span></h2>
+            <script>
+              var interests=["Problem solving","Web Development","Competitive Programming"];
+              var i = 0;
+              var j = 0;
+              // for(i=0;i<interests.length;i++)
+              // {
+              //   document.getElementById("qq").innerHTML="";
+              //   var txt = interests[i];
+              //   console.log(txt);
+              //   var speed = 50;
+              //   for(j=0;j<txt.length;j++)
+              //   {
+              //     function typeWriter() {
+              //         document.getElementById("qq").innerHTML += txt[j];
+              //         console.log(document.getElementById("qq").innerHTML);
+              //         setTimeout(typeWriter, speed);
+              //
+              //     }
+              //   }
+              // }
+
+              var i=0;
+              var j=0;
+              var tx="Exploring new technologies";
+              function update()
+              {
+                i=(i+1)%(interests.length);
+                return tx.replace(/Exploring new technologies/,interests[i]);
+              }
+              function change()
+              {
+                var txt=update();
+                document.getElementById("qq").innerHTML=txt;
+              }
+            //   var showText = function (target, message, index, interval)
+            //   {
+            //     if (index < message.length) {
+            //       $(target).append(message[index++]);
+            //       setTimeout(function () { showText(target, message, index, interval); }, interval);
+            //     }
+            //   }
+            //   $(function () {
+            //   showText("#qq", interests[j], 0, 800);
+            // });
+              setInterval("change()",2000);
+            </script>
           </div>
     </div>
   </section>
@@ -109,29 +155,60 @@
     <h2 class="myskills">My Skills</h2>
     <div class="skill-cont">
       <h3 class="skill">C++</h3>
+      <div class="txt" id="txt">0%</div>
       <div class="progress" style="height:36px">
-        <div class="progress-bar" style="width:80%;height:36px">80%</div>
+        <div class="progress-bar" id="bar" style="height:36px"></div>
       </div>
+      <div class="bp">
+          <button id="btp" type="button" class="btn btn-info btp">+10</button>
+          <button id="btm" type="button" class="btn btn-info btn">-10</button>
+      </div>
+
     </div>
 
   <div class="skill-cont">
     <h3 class="skill">JavaScript</h3>
-    <div class="progress" style="height:36px">
+    <!-- <div class="progress" style="height:36px">
       <div class="progress-bar" style="width:70%;height:36px">70%</div>
+    </div> -->
+    <div class="txt" id="txt1">0%</div>
+    <div class="progress" style="height:36px">
+      <div class="progress-bar" id="bar1" style="height:36px"></div>
     </div>
-  </div>
+    <div class="bp">
+        <button id="btp1" type="button" class="btn btn-info btp">+10</button>
+        <button id="btm1" type="button" class="btn btn-info btn">-10</button>
+    </div>
+
+    </div>
 
   <div class="skill-cont">
     <h3 class="skill">ReactJS</h3>
-    <div class="progress" style="height:36px">
+    <!-- <div class="progress" style="height:36px">
       <div class="progress-bar" style="width:65%;height:36px">65%</div>
+    </div> -->
+    <div class="txt" id="txt2">0%</div>
+    <div class="progress" style="height:36px">
+      <div class="progress-bar" id="bar2" style="height:36px"></div>
+    </div>
+    <div class="bp">
+        <button id="btp2" type="button" class="btn btn-info btp">+10</button>
+        <button id="btm2" type="button" class="btn btn-info btn">-10</button>
     </div>
   </div>
 
   <div class="skill-cont">
     <h3 class="skill">ExpressJS</h3>
-    <div class="progress" style="height:36px">
+    <!-- <div class="progress" style="height:36px">
       <div class="progress-bar" style="width:60%;height:36px">60%</div>
+    </div> -->
+    <div class="txt" id="txt3">0%</div>
+    <div class="progress" style="height:36px">
+      <div class="progress-bar" id="bar3" style="height:36px"></div>
+    </div>
+    <div class="bp">
+        <button id="btp3" type="button" class="btn btn-info btp">+10</button>
+        <button id="btm3" type="button" class="btn btn-info btn">-10</button>
     </div>
   </div>
 
@@ -229,8 +306,8 @@
     </div>
     <p>Made with love by Amogh Sinkar</p>
   </footer>
-
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="index.js"></script>
 </body>
 
 </html>
